--- a/★★기록용★★.md
+++ b/★★기록용★★.md
@@ -1,1 +1,6 @@
-<img width="1102" height="916" alt="260220_full_layout" src="https://github.com/user-attachments/assets/7b0fa502-6cbf-419c-bd87-c21d23b9bc91" />
+![피드 전체 화면](./images/260220_full_layout.png)
+
+26-02-20
+레이아웃 초안 완성함.
+의도한 바를 남겨보겠음.
+
